refactor(exotic-standalone): 重构启动脚本和帮助文档
- 优化了 ExoticExecutor.kt 文件中的代码结构和逻辑
- 重新编写了 help.ps1 脚本，提高了可读性和健壮性
-简化了 start.ps1脚本，去除了不必要的 Java 版本检查和 JVM 选项